--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,11 +6,11 @@
   --color-primary: #6CAA86;
   --color-secondary: #DE8E00;
   --color-accent: #447169;
-  --color-bg: #f5f5f5;
+  --color-bg: #a1a1a1;
   --color-text: #2d2d2d;
   --color-text-light: #666;
-  --color-white: #ffffff;
-  --color-border: #e0e0e0;
+  --color-white: #bbbbbb;
+  --color-border: #808080;
 }
 
 * {
